javafx-sdk 21.0.1 and perms for annotation processing