@@ -18,7 +18,7 @@
     <properties>
         <java.version>21</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <javafx.version>21-ea+24</javafx.version>
+        <javafx.version>21.0.1</javafx.version>
         <slf4j.version>2.0.9</slf4j.version>
         <log4j.version>2.20.0</log4j.version>
         <batik.version>1.17</batik.version>
@@ -142,7 +142,7 @@
             <version>1.2.2</version>
         </dependency>
 
-        <!-- themne detector -->
+        <!-- theme detector -->
 
         <dependency>
             <groupId>com.github.Dansoftowner</groupId>
@@ -278,6 +278,7 @@
                     <executable>${env.JAVA_HOME}/bin/javac</executable>
                     <compilerArgs>
                         <arg>-Xlint:unchecked</arg>
+                        <arg>-proc:full</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
